--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,9 +12,9 @@ resources:
     type: github
     name: sincros121/bootcamp-app
     endpoint: sincros121
-    ref: master
+    # ref: master
     trigger:
-      batch: true
+      # batch: true
       branches:
         include:
         - master
