Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,11 +8,11 @@ resources:
     ref: main
     endpoint: sincros121
 
-  # - repository: bootcamp-app      
-  #   type: github
-  #   name: sincros121/bootcamp-app
-  #   endpoint: sincros121
-  #   ref: master
+  - repository: bootcamp-app      
+    type: github
+    name: sincros121/bootcamp-app
+    endpoint: sincros121
+    ref: master
     # trigger:
     #   # batch: true
     #   branches:
