--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ resources:
 trigger: 
   branches:
     include:
-      - master
+      - sincros121/bootcamp-app
   batch: true
 
 pool: 'self-hosted-stas'
