Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ resources:
 trigger: 
   branches:
     include:
-      - sincros121/bootcamp-app
+      - main
   batch: true
 
 pool: 'self-hosted-stas'
