Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,11 +13,10 @@ resources:
     name: sincros121/bootcamp-app
     endpoint: sincros121
     ref: master
-    # trigger:
-    #   # batch: true
-    #   branches:
-    #     include:
-    #     - master
+    trigger:
+      branches:
+        include:
+        - master
 
 trigger: 
   branches:
