Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,4 @@
-trigger: 
-  branches:
-    include:
-      - master
-  batch: true
+
 
 resources:
   repositories: 
@@ -12,16 +8,15 @@ resources:
     ref: main
     endpoint: sincros121
 
-  # - repository: bootcamp-app      
-  #   type: github
-  #   name: sincros121/bootcamp-app
-  #   endpoint: sincros121
-  #   ref: master
-  #   trigger:
-  #     branches:
-  #       include:
-  #       - master
-
+  - repository: bootcamp-app      
+    type: github
+    name: sincros121/bootcamp-app
+    endpoint: sincros121
+    ref: master
+    trigger:
+      branches:
+        include:
+        - master
 
 
 pool: 'self-hosted-stas'
